--- a/students/templates/list.html
+++ b/students/templates/list.html
@@ -3,8 +3,8 @@
   <h1 class="my-2">STUDENT LISTING</h1>
   <div class="d-flex flex-wrap">
   {% for i in students %}
-  <div class="card m-2" style="width: 25rem; border: 1px solid #dee2e6; border-radius: 10px;">
-    <div class="card-header" style="background-color: rgb(54, 54, 54); color: white;">
+  <div class="card m-2" style="width: 25rem; border: 1px solid #6e93d8; border-radius: 10px;">
+    <div class="card-header" style="background: linear-gradient(to right, #5a67d8, #3d92ec);">
       #{{i.id}}
     </div>
       <div class="card-body">
