--- a/students/templates/base.html
+++ b/students/templates/base.html
@@ -5,49 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
-      body {
-          font-family: Arial, sans-serif;
-      }
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f5f5f5;
+        }
 
-      .navbar {
-          background-color: #007bff;
-      }
 
-      .navbar-brand {
-          color: white;
-          font-weight: bold;
-      }
+        
 
-      .nav-link {
-          color: white;
-          transition: color 0.3s;
-      }
+        .navbar-brand {
+            color: white;
+            font-weight: bold;
+        }
 
-      .nav-link:hover {
-          color: #f8f9fa;
-      }
+        .navbar-nav .nav-item .nav-link {
+            color: white;
+            transition: color 0.3s;
+        }
 
-      .container {
-          padding: 30px;
-          border: 1px solid #dee2e6;
-          border-radius: 10px;
-          background-color: #f8f9fa;
-          margin-top: 20px;
-      }
+        .navbar-nav .nav-item .nav-link:hover {
+            color: #f8f9fa;
+        }
 
-      .btn-primary {
-          background-color: #007bff;
-          border: none;
-      }
+        .container {
+            padding: 30px;
+            border: 1px solid #dee2e6;
+            border-radius: 10px;
+            background-color: #f5f5f5;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+        }
 
-      .btn-primary:hover {
-          background-color: #0056b3;
-      }
-  </style>
+        .btn-primary {
+            background-color: linear-gradient(to right, #5a67d8, #3d92ec);
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <nav class=" container navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="container navbar navbar-expand-lg navbar-dark" style="background: linear-gradient(to right, #6a00ff, #3d92ec);">
         <a class="navbar-brand" href="{% url 'students:listing' %}">STUDENT MANAGEMENT</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
